Shrink container size